--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -20,7 +20,9 @@
     <p></p>
     <label for="name">Отчество</label>
     <input type="text" name="name" placeholder="Иванович">
-    
+     <p></p>
+    <label for="name">email</label>
+    <input type="text" name="name" placeholder="mail@mail.ru">
 </div>
 </fieldset>
 <p></p>
